typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            24,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts:2:10
  |
2 | var v: { [e]?(): number };
  |          ^^^^^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            25,
        ),
        hi: BytePos(
            26,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts:2:11
  |
2 | var v: { [e]?(): number };
  |           ^

